kubernetes/fwends-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: fwends-backend
  labels:
    app: fwends-backend
spec:
  clusterIP: None
  ports:
    - port: 8080
      name: fwends-backend
  selector:
    app: fwends-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fwends-backend
  labels:
    app: fwends-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fwends-backend
  template:
    metadata:
      labels:
        app: fwends-backend
    spec:
      containers:
      - name: fwends-backend
        image: fwends-backend
        ports:
        - containerPort: 8080
          name: http
