kubernetes/fwends-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fwends-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: fwends-backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fwends-frontend
            port:
              number: 80
